Update swagger files and post portfolio response.
