# internal/portfolio/handlers/postPortfolio.go
@@ -1,6 +1,7 @@
 package portfolio
 
 import (
+	"fmt"
 	"github.com/aerospike/aerospike-client-go"
 	"github.com/gin-gonic/gin"
 	"github.com/sajeevany/portfolio-service/internal/config"
@@ -12,10 +13,12 @@ import (
 
 //@Summary Creates portfolio a unique ID
 //@Description Insert portfolio. Returns the portfolio ID.
+//@Accept json
+//@Param portfolio body model.PortfolioCreateModel true "Add account"
 //@Produce json
 //@Success 200 {object} model.PortfolioID
 //@Failure 404 {string} model.Error
-//@Router /portfolio/:portfolioID [post]
+//@Router /portfolio [post]
 //@Tags portfolio
 func PostPortfolio(logger *logrus.Logger, client *aerospike.Client, setMetadata config.SetMD) gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -23,8 +26,9 @@ func PostPortfolio(logger *logrus.Logger, client *aerospike.Client, setMetadata 
 		//Bind body to portfolio object
 		var portfolio model.PortfolioCreateModel
 		if bErr := ctx.ShouldBindJSON(&portfolio); bErr != nil {
-			logger.Errorf("Unable to bind request body to portfolio object %v", bErr)
-			ctx.JSON(http.StatusBadRequest, gin.H{"error": bErr.Error()})
+			msg := fmt.Sprintf("Unable to bind request body to portfolio object %v", bErr)
+			logger.Errorf(msg)
+			ctx.JSON(http.StatusBadRequest, gin.H{"error": msg})
 			return
 		}
 
@@ -42,15 +46,17 @@ func PostPortfolio(logger *logrus.Logger, client *aerospike.Client, setMetadata 
 			ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
-
-		logger.Infof("Generated ID %v", id)
+		logger.Debugf("Generated ID %v", id)
 
 		//Default response for testing
-		response := model.AllPortfoliosViewModel{
-			Portfolios: []model.PortfolioViewModel{{
-				Metadata: model.MetadataViewModel{
-					ID: "1", CreateTime: "2", LastUpdated: "3"},
-				Stocks: []model.StockViewModel{}}},
+		//response := model.AllPortfoliosViewModel{
+		//	Portfolios: []model.PortfolioViewModel{{
+		//		Metadata: model.MetadataViewModel{
+		//			ID: "1", CreateTime: "2", LastUpdated: "3"},
+		//		Stocks: []model.StockViewModel{}}},
+		//}
+		response := model.PortfolioID{
+			ID: id,
 		}
 		ctx.JSON(http.StatusOK, response)
 	}
